--- a/hexadb-query/package.json
+++ b/hexadb-query/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-typeahead": "^3.4.7",
     "react-dom": "^16.12.0",
+    "react-json-view": "^1.19.1",
     "react-scripts": "3.3.0"
   },
   "scripts": {
