--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hexadb-query",
+  "name": "hexadb-query-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,5 +38,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
+  },
+  "homepage": "https://jobeland.github.io/hexadb-query-ui",
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
 }
